Bug 1440041 - Add a new readonly attribute nsIPaymentRequest.shippingOption. r=baku.