dom/payments/PaymentActionRequest.h
@@ -49,6 +49,7 @@ private:
   nsCOMPtr<nsIArray> mMethodData;
   nsCOMPtr<nsIPaymentDetails> mDetails;
   nsCOMPtr<nsIPaymentOptions> mOptions;
+  nsString mShippingOption;
 };
 
 class PaymentCompleteActionRequest final : public nsIPaymentCompleteActionRequest
@@ -80,6 +81,7 @@ private:
   ~PaymentUpdateActionRequest() = default;
 
   nsCOMPtr<nsIPaymentDetails> mDetails;
+  nsString mShippingOption;
 };
 
 } // end of namespace dom
